--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,18 @@ a{
 
 .doctor_color{
   border-left:5px solid #d9534f;
-
 }
+.doctor_color_urgent{
+  border-left:5px solid #d9534f;
+}
+.doctor_color_unstable{
+  border-left:5px solid #ed9c28;
+}
+.doctor_color_stable{
+  border-left:5px solid #39b3d7;
+}
+
+
 .margin_10{
   padding-left:10px;
   padding-right:10px;
